<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="title">Playlist maker</string>
    <string name="main_screen_find">Поиск</string>
    <string name="screen_audio_player">Аудио плеер</string>
    <string name="main_screen_media">Медиатека</string>
    <string name="main_screen_settings">Настройки</string>

    <string name="settings_screen_theme">Темная тема</string>
    <string name="settings_screen_share">Поделится приложением</string>
    <string name="settings_screen_support">Написать в поддержку</string>
    <string name="settings_screen_agreement">Пользовательское соглашение</string>

    <string name="clear_icon">Очистить сообщение</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history">Вы искали</string>

    <string name="send_email" translatable="false">Отправить письмо</string>
    <string name="mail_address" translatable="false">zakhar-panchenko@yandex.ru</string>
    <string name="mail_theme" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="title_share" translatable="false">Поделится приложением</string>
    <string name="url_share" translatable="false">Попробуйте курс https://practicum.yandex.ru/android-developer/</string>
    <string name="offer_address" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <string name="no_find_songs" translatable="false">Ничего не нашлось</string>
    <string name="network_error_top_message" translatable="false">Проблемы со связью</string>
    <string name="network_error_bottom_message" translatable="false">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="network_error_button" translatable="false">Обновить</string>

    <string name="favorites_title" translatable="false">Избранные треки</string>
    <string name="playlists_title" translatable="false">Плейлисты</string>

    <string name="playlist_new_button" translatable="false">Новый плейлист</string>
    <string name="edit_playlist_title" translatable="false">Редактирование</string>

    <string name="playlist_empty" translatable="false">Вы не создали\nни одного плейлиста</string>
    <string name="mediateka_empty" translatable="false">Ваша медиатека пуста</string>
    <string name="create_playlist" translatable="false">Создать новый</string>
    <string name="create" translatable="false">Создать</string>
    <string name="add_playlist" translatable="false">Добавить в плейлист</string>
    <string name="cover_playlist" translatable="false">Обложка плейлиста</string>

    <string name="name_playlist" translatable="false">Название*</string>
    <string name="description_playlist" translatable="false">Описание</string>


    <string name="title_activity_settings2" translatable="false">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <string name="playlist" translatable="false">Плейлист</string>
    <string name="minutes_format" translatable="false">%s мин</string>

    <string name="delete_track_title" translatable="false">Удалить трек</string>
    <string name="delete_track_message" translatable="false">Хотите удалить трек?</string>
    <string name="yes" translatable="false">ДА</string>
    <string name="no" translatable="false">НЕТ</string>

    <string name="ok" translatable="false">OK</string>
    <string name="share" translatable="false">Поделиться</string>
    <string name="edit" translatable="false">Редактировать информацию</string>
    <string name="delete" translatable="false">Удалить плейлист</string>
    <string name="share_error_title" translatable="false">Поделиться плейлистом</string>
    <string name="share_error_message" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist" translatable="false">Поделиться плейлистом</string>
    <string name="delete_playlist_title" translatable="false">Удалить плейлист</string>
    <string name="delete_playlist_message" translatable="false">Хотите удалить плейлист \"%s\"?</string>
    <string name="tracks_count" translatable="false">%d треков</string>
    <string name="playlist_deleted_toast" translatable="false">Плейлист удален</string>
    <string name="empty_playlist_message" translatable="false">В плейлисте пока нет треков</string>

    <string name="back">Назад</string>
    <string name="search_hint">Введите название трека</string>
    <string name="clear">Очистить</string>
    <string name="track_cover">Обложка трека</string>
    <string name="button_forward">Стрелка вправо</string>

</resources>