<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="@dimen/primary_indent_size"
        tools:layout_editor_absoluteY="@dimen/primary_indent_size_0"
        android:padding="@dimen/primary_indent_size_2">

        <Button
            android:id="@+id/backToMain"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            app:icon="@drawable/ic_s_top_arrow_back"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/main_screen_settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/main_screen_primary_text_size"
            android:textStyle="bold"
            android:padding="@dimen/primary_indent_size_12"
            android:fontFamily="@font/ys_display_medium"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>

        <Switch
            android:id="@+id/switchTheme"
            style="@style/ButtonSettingsStyle"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="@dimen/primary_indent_size_21"
            android:text="@string/settings_screen_theme"
            android:trackTint="?attr/colorSecondary"
            android:thumbTint="?attr/colorOnSecondary"/>

        <Button
            android:id="@+id/share"
            app:icon="@drawable/ic_s_share"
            android:text="@string/settings_screen_share"
            style="@style/ButtonSettingsStyle"/>
        <Button
            android:id="@+id/sendToSupport"
            app:icon="@drawable/ic_s_support"
            android:text="@string/settings_screen_support"
            style="@style/ButtonSettingsStyle"/>
        <Button
            android:id="@+id/agreement"
            app:icon="@drawable/ic_s_arrow_forward"
            android:text="@string/settings_screen_agreement"
            style="@style/ButtonSettingsStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>