<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorPrimaryVariant">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/yp_white"
            android:padding="@dimen/primary_indent_size_4"
            android:layout_margin="@dimen/primary_indent_size_12"
            android:textSize="@dimen/main_screen_primary_text_size"
            android:textStyle="bold"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>
        <LinearLayout
            android:id="@+id/groupTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/primary_indent_size_28">
            <Button
                android:id="@+id/bSearch"
                android:text="@string/main_screen_find"
                app:icon="@drawable/ic_search"
                style="@style/ButtonMainScreenStyle"/>
            <Button
                android:id="@+id/bMedia"
                android:text="@string/main_screen_media"
                app:icon="@drawable/ic_media"
                style="@style/ButtonMainScreenStyle"/>
            <Button
                android:id="@+id/bSettings"
                android:text="@string/main_screen_settings"
                app:icon="@drawable/ic_settings"
                style="@style/ButtonMainScreenStyle"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>